// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated_columns_example entitySchema=false as functions from extensions: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class AllowedAgesAtCreation {

  [PrimaryKeyProp]?: 'age';

  @PrimaryKey({ columnType: 'tinyint', autoincrement: false })
  age!: number;

}
",
  "import { Entity, ManyToOne, type Opt, PrimaryKey, Property } from '@mikro-orm/core';
import { AllowedAgesAtCreation } from './AllowedAgesAtCreation';

@Entity()
export class Users {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Property({ type: 'string', length: 200, generated: () => "(concat(\`first_name\`,_utf8mb4' ',\`last_name\`)) virtual" })
  fullName!: string & Opt;

  @Property({ type: 'Date', length: 0, defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ columnType: 'date' })
  dateOfBirth!: string;

  @ManyToOne({ entity: () => AllowedAgesAtCreation, fieldName: 'age_at_creation', deleteRule: 'cascade', generated: () => "(timestampdiff(YEAR,\`date_of_birth\`,\`created_at\`)) stored", nullable: true, index: 'fk_users_allowed_ages_at_creation_idx' })
  ageAtCreation?: AllowedAgesAtCreation;

}
",
]
`;

exports[`generated_columns_example entitySchema=false generates from db: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class AllowedAgesAtCreation {

  [PrimaryKeyProp]?: 'age';

  @PrimaryKey({ columnType: 'tinyint', autoincrement: false })
  age!: number;

}
",
  "import { Entity, ManyToOne, type Opt, PrimaryKey, Property } from '@mikro-orm/core';
import { AllowedAgesAtCreation } from './AllowedAgesAtCreation';

@Entity()
export class Users {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Property({ type: 'string', length: 200, generated: '(concat(\`first_name\`,_utf8mb4\\' \\',\`last_name\`)) virtual' })
  fullName!: string & Opt;

  @Property({ type: 'Date', length: 0, defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt!: Date & Opt;

  @Property({ columnType: 'date' })
  dateOfBirth!: string;

  @ManyToOne({ entity: () => AllowedAgesAtCreation, fieldName: 'age_at_creation', deleteRule: 'cascade', generated: '(timestampdiff(YEAR,\`date_of_birth\`,\`created_at\`)) stored', nullable: true, index: 'fk_users_allowed_ages_at_creation_idx' })
  ageAtCreation?: AllowedAgesAtCreation;

}
",
]
`;

exports[`generated_columns_example entitySchema=true as functions from extensions: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class AllowedAgesAtCreation {
  [PrimaryKeyProp]?: 'age';
  age!: number;
}

export const AllowedAgesAtCreationSchema = new EntitySchema({
  class: AllowedAgesAtCreation,
  properties: {
    age: { primary: true, type: 'number', columnType: 'tinyint', autoincrement: false },
  },
});
",
  "import { EntitySchema, type Opt } from '@mikro-orm/core';
import { AllowedAgesAtCreation } from './AllowedAgesAtCreation';

export class Users {
  id!: number;
  firstName!: string;
  lastName!: string;
  fullName!: string & Opt;
  createdAt!: Date & Opt;
  dateOfBirth!: string;
  ageAtCreation?: AllowedAgesAtCreation;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  properties: {
    id: { primary: true, type: 'number' },
    firstName: { type: 'string', length: 100 },
    lastName: { type: 'string', length: 100 },
    fullName: {
      type: 'string',
      length: 200,
      generated: () => "(concat(\`first_name\`,_utf8mb4' ',\`last_name\`)) virtual",
    },
    createdAt: { type: 'Date', length: 0, defaultRaw: \`CURRENT_TIMESTAMP\` },
    dateOfBirth: { type: 'string', columnType: 'date' },
    ageAtCreation: {
      kind: 'm:1',
      entity: () => AllowedAgesAtCreation,
      fieldName: 'age_at_creation',
      deleteRule: 'cascade',
      generated: () => "(timestampdiff(YEAR,\`date_of_birth\`,\`created_at\`)) stored",
      nullable: true,
      index: 'fk_users_allowed_ages_at_creation_idx',
    },
  },
});
",
]
`;

exports[`generated_columns_example entitySchema=true generates from db: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class AllowedAgesAtCreation {
  [PrimaryKeyProp]?: 'age';
  age!: number;
}

export const AllowedAgesAtCreationSchema = new EntitySchema({
  class: AllowedAgesAtCreation,
  properties: {
    age: { primary: true, type: 'number', columnType: 'tinyint', autoincrement: false },
  },
});
",
  "import { EntitySchema, type Opt } from '@mikro-orm/core';
import { AllowedAgesAtCreation } from './AllowedAgesAtCreation';

export class Users {
  id!: number;
  firstName!: string;
  lastName!: string;
  fullName!: string & Opt;
  createdAt!: Date & Opt;
  dateOfBirth!: string;
  ageAtCreation?: AllowedAgesAtCreation;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  properties: {
    id: { primary: true, type: 'number' },
    firstName: { type: 'string', length: 100 },
    lastName: { type: 'string', length: 100 },
    fullName: {
      type: 'string',
      length: 200,
      generated: '(concat(\`first_name\`,_utf8mb4\\' \\',\`last_name\`)) virtual',
    },
    createdAt: { type: 'Date', length: 0, defaultRaw: \`CURRENT_TIMESTAMP\` },
    dateOfBirth: { type: 'string', columnType: 'date' },
    ageAtCreation: {
      kind: 'm:1',
      entity: () => AllowedAgesAtCreation,
      fieldName: 'age_at_creation',
      deleteRule: 'cascade',
      generated: '(timestampdiff(YEAR,\`date_of_birth\`,\`created_at\`)) stored',
      nullable: true,
      index: 'fk_users_allowed_ages_at_creation_idx',
    },
  },
});
",
]
`;
